--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
