--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 httpx = "^0.23.0"
+numpy = "^1.22.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
